fulldeployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiquizmaster
spec:
  tls:
  - hosts:
    - aiquizmaster.app
    secretName: aiquizmaster-cert
  rules:
  - host: aiquizmaster.app
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: aiquizmaster-service
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aiquizmaster-service-ui
            port:
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiquizmaster-ui
  labels:
    app: aiquizmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiquizmaster
  template:
    metadata:
      labels:
        app: aiquizmaster
    spec:
      containers:
      - name: aiquizmaster-ui
        image: pankajkumar229/aiquizmasters-ui:v1
        ports:
        - containerPort: 3000
---
kind: Service 
apiVersion: v1 
metadata:
  name: aiquizmaster-service-ui
spec:
  type: NodePort
  selector:
    app: aiquizmaster
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiquizmaster 
  labels:
    app: aiquizmaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiquizmaster
  template:
    metadata:
      labels:
        app: aiquizmaster
    spec:
      containers:
      - name: aiquizmaster
        image: pankajkumar229/aiquizmasters:v1.5
        ports:
        - containerPort: 8888
---
kind: Service 
apiVersion: v1 
metadata:
  name: aiquizmaster-service 
spec:
  type: NodePort
  selector:
    app: aiquizmaster
  ports:
    - port: 8888 
      targetPort: 8888
